add version 1.0 allure